src/snapshots/simple_llm_proxy__config__tests__auth_tokens.snap
---
source: src/config.rs
expression: processed
---
remaps: []
auth_tokens:
  my-12345: dummytoken
  my-98765: envtoken
config_models:
  models:
    - local/model
    - remote/model
  model_map:
    local/model:
      base_url: "http://localhost:8080/v1"
      api_key: ~
      model: whatever
    remote/model:
      base_url: "https://example.com/v1"
      api_key: sk-12345
      model: other-model
all_models:
  models:
    - local/model
    - remote/model
  model_map:
    local/model:
      base_url: "http://localhost:8080/v1"
      api_key: ~
      model: whatever
    remote/model:
      base_url: "https://example.com/v1"
      api_key: sk-12345
      model: other-model
