src/snapshots/simple_llm_proxy__config__tests__basic_remaps_no_match.snap
---
source: src/config.rs
expression: processed
---
ProcessedConfig(
  remaps: [
    ProcessedRemap(
      prefix: "remote/",
      provider: "dummy",
      base_url: "https://example.com/v1",
      api_key: Some("sk-12345"),
      models: ModelMap(
        models: [],
        model_map: {},
      ),
    ),
    ProcessedRemap(
      prefix: "remote2/",
      provider: "dummy",
      base_url: "https://example.com/v1",
      api_key: Some("sk-12345"),
      models: ModelMap(
        models: [
          "remote2/nofilter",
        ],
        model_map: {
          "remote2/nofilter": ModelTarget(
            base_url: "https://example.com/v1",
            api_key: Some("sk-12345"),
            model: "nofilter",
          ),
        },
      ),
    ),
  ],
  auth_tokens: {},
  config_models: ModelMap(
    models: [
      "local/model",
      "remote/model",
    ],
    model_map: {
      "local/model": ModelTarget(
        base_url: "http://localhost:8080/v1",
        api_key: None,
        model: "whatever",
      ),
      "remote/model": ModelTarget(
        base_url: "https://example.com/v1",
        api_key: Some("sk-12345"),
        model: "other-model",
      ),
    },
  ),
  all_models: ModelMap(
    models: [
      "local/model",
      "remote/model",
      "remote2/nofilter",
    ],
    model_map: {
      "local/model": ModelTarget(
        base_url: "http://localhost:8080/v1",
        api_key: None,
        model: "whatever",
      ),
      "remote/model": ModelTarget(
        base_url: "https://example.com/v1",
        api_key: Some("sk-12345"),
        model: "other-model",
      ),
      "remote2/nofilter": ModelTarget(
        base_url: "https://example.com/v1",
        api_key: Some("sk-12345"),
        model: "nofilter",
      ),
    },
  ),
)
