src/snapshots/simple_llm_proxy__config__tests__get_models.snap
---
source: src/config.rs
expression: "&processed.get_models()"
---
[
  "local/model",
  "remote/model",
]
