src/snapshots/simple_llm_proxy__config__tests__get_target_found-2.snap
---
source: src/config.rs
expression: "&processed.get_target(\"remote/model\").unwrap()"
---
ModelTarget(
  base_url: "https://example.com/v1",
  api_key: Some("sk-12345"),
  model: "other-model",
)
