src/snapshots/simple_llm_proxy__config__tests__get_target_found.snap
---
source: src/config.rs
expression: "&processed.get_target(\"local/model\").unwrap()"
---
ModelTarget(
  base_url: "http://localhost:8080/v1",
  api_key: None,
  model: "whatever",
)
