src/snapshots/simple_llm_proxy__config__tests__remaps.snap
---
source: src/config.rs
expression: processed
---
ProcessedConfig(
  remaps: [
    ProcessedRemap(
      prefix: "remote/",
      provider: "dummy",
      base_url: "https://example.com/v1",
      api_key: Some("sk-12345"),
    ),
    ProcessedRemap(
      prefix: "remote2/",
      provider: "dummy",
      base_url: "https://example.com/v1",
      api_key: Some("sk-12345"),
    ),
  ],
  auth_tokens: {},
  config_models: ModelMap(
    models: [
      "local/model",
      "remote/model",
    ],
    model_map: {
      "local/model": ModelTarget(
        base_url: "http://localhost:8080/v1",
        api_key: None,
        model: "whatever",
      ),
      "remote/model": ModelTarget(
        base_url: "https://example.com/v1",
        api_key: Some("sk-12345"),
        model: "other-model",
      ),
    },
  ),
)
